refactor: update dependencies and remove HuggingFace integration
- Removed "@llamaindex/huggingface" from package.json.
- Updated index.ts to use OllamaEmbedding instead of HuggingFaceEmbedding for embedding model configuration.
- Added a setup script for Ollama models in agentic-rag-sample.
- Enhanced prompt-api-playground with improved error handling and user feedback for model availability.
- Updated README.md and index.html links to reflect the latest documentation.
- Added new npm scripts for easier installation of submodules in the main project.

--- a/prompt-api-playground/index.html
+++ b/prompt-api-playground/index.html
@@ -24,7 +24,7 @@
     <p>
       This is a demo of Chrome's
       <a
-        href="https://developer.chrome.com/docs/ai/built-in"
+        href="https://developer.chrome.com/docs/ai/prompt-api"
       >built-in Prompt API</a>
       powered by Gemini Nano.
     </p>
@@ -60,9 +60,9 @@
           <tr>
             <th>Temperature</th>
             <th>Top-k</th>
-            <th>Tokens so far</th>
-            <th>Tokens left</th>
-            <th>Total tokens</th>
+            <th>Input Usage</th>
+            <th>Input Remaining</th>
+            <th>Input Quota</th>
           </tr>
         </thead>
         <tbody>
