Add origin trial meta tag and update API usage in prompt playground
- Added an origin trial meta tag to index.html for enhanced features.
- Updated script.js to use self.LanguageModel instead of self.ai.languageModel for API calls.
- Implemented parameter validation for temperature and topK inputs to ensure they remain within defined limits.
- Adjusted session initialization to set minimum values for topK and ensure valid input values.

--- a/prompt-api-playground/index.html
+++ b/prompt-api-playground/index.html
@@ -8,6 +8,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" content="dark light">
+    <meta http-equiv="origin-trial" content="Aq1kMNMJGNDo7/yPLcMjuCPPt6yagT2AJMUTwXoqdhYIgtGpwJAk+b23OBMOzBprnEt/fZD24poMmmc/Lih2yQ4AAABdeyJvcmlnaW4iOiJodHRwOi8vbG9jYWxob3N0OjgwODAiLCJmZWF0dXJlIjoiQUlQcm9tcHRBUElNdWx0aW1vZGFsSW5wdXQiLCJleHBpcnkiOjE3NzQzMTA0MDB9">
     <link
     rel="icon"
     href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>✨</text></svg>"
@@ -90,10 +91,5 @@
         <pre id="problem"></pre>
       </div>
     </div>
-    <footer>
-      Made by
-      <a href="https://github.com/tomayac/">@tomayac</a>. Source code on
-      <a href="https://github.com/tomayac/prompt-api-playground">GitHub</a>.
-    </footer>
   </body>
 </html>
